test/src/e2e_vm_tests/test_programs/should_pass/language/deprecated/src/main.sw
library;

#[deprecated]
struct A {
}

pub fn f() {
    let _ = A {};
}