test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_multiplicity/src/abi_name_attr.sw
library;

#[abi_name(name = "name")]
pub struct Ok1 { }

#[abi_name(name = "name", name = "other name")]
pub struct NotOk1 { }
